Low contrast fix

--- a/themes/finna2/less/finna/image-popup.less
+++ b/themes/finna2/less/finna/image-popup.less
@@ -350,7 +350,7 @@
         .record-informations {
             text-align: left;
             width: 100%;
-            color: #ABABAB;
+            color: #333333;
             font-size: 1em;
             letter-spacing: .5px;
             font-weight: 400;
